--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <span class="input_underline"></span>
 
             <button type="submit" id="submit_Buttom">Sign in</button>
+            <a href="#" class="recovery_password">Forgot Password?</a>
         </form>
     </main>
 
