verificações de senha

--- a/index.html
+++ b/index.html
@@ -34,11 +34,12 @@
             <span class="input_underline"></span>
 
             <div class="error_mensages">
+                <span id="password-space-error">Password cannot contain blank spaces</span>
                 <span id="character-password-error">8 characters</span>
                 <span id="uppercase-password-error">1 uppercase letter</span>
                 <span id="lowercase-password-error">1 lowercase letter</span>
-                <!-- <span id="password-space-error">1 special character</span> -->
-                <span id="symbol-password-error">1 special character</span>
+                <span id="number-password-error">1 number</span>
+                <span id="symbol-password-error">1 special character ($*&@#)</span>
             </div>
 
             <button type="submit" id="submit_Buttom">Sign in</button>
