--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <span class="input_underline"></span>
 
             <div class="error_mensages">
+                <span id="email-space-error">Email cannot contain blank spaces</span>
                 <span id="empty-email-error">Email must be filled</span>
                 <span id="no-gmail-error">Email must contain '@gmail.com'</span>
             </div>
